--- a/ansible/roles/django/tasks/main.yml
+++ b/ansible/roles/django/tasks/main.yml
@@ -1,10 +1,5 @@
 ---
 - import_tasks: settings.yml
-  tags:
-    - deploy
-    - migrate
-
 - import_tasks: migrate.yml
-  tags:
-    - deploy
-    - migrate
+- import_tasks: systemuser.yml
+- import_tasks: collectstatic.yml
