--- a/todo/requirements.txt
+++ b/todo/requirements.txt
@@ -1,27 +1,32 @@
 # common
-redis==3.2.1
 celery==4.3.0
+psycopg2-binary==2.8.3
+redis==3.3.5
+gunicorn==19.9.0
 flower==0.9.3
-psycopg2-binary==2.8.2
+pydevd-pycharm~=191.7479.30
 
 # django
-django==2.2.2
+django==2.2.3
 django-cors-headers==3.0.2
 django-celery-email==2.0.2
-django-model-utils==3.1.2
+django-model-utils==3.2.0
 django-debug-toolbar==1.11
 django-taggit==1.1.0
-django-filter==2.1.0
-djangorestframework==3.9.4
-djangorestframework_simplejwt==4.3.0
+django-filter==2.2.0
+djangorestframework==3.10.1
+djangorestframework-simplejwt==4.3.0
 djangorestframework-filters==v1.0.0.dev0
 drf-dynamic-fields==0.3.1
 drf-writable-nested==0.5.1
-coverage==4.5.3
 freezegun==0.3.12
-pytest==4.5.0
-pytest-django==3.4.8
+supervisor==4.0.3
+
+# tests
+pytest==5.0.1
+coverage==4.5.4
+pytest-django==3.5.1
 pytest-cov==2.7.1
 pytest-xdist==1.28.0
-pydevd-pycharm~=191.7479.30
-supervisor==4.0.3
+factory-boy==2.12.0
+pytest-freezegun==0.3.0.post1
